--- a/index.html
+++ b/index.html
@@ -7,16 +7,14 @@
     <link rel="stylesheet" a href="style.css">
 </head>
 <body>
-    <header>
-     <a href="https://www.youtube.com/channel/UCoKyNocqjvrVNRbZjq4FZeg"><img src="вафелька.jpg" width="70" height="70"></a>
-    <a href="https://www.youtube.com/channel/UCoKyNocqjvrVNRbZjq4FZeg"><h3>Coddex</h3></a>
-    </header>
     <footer>
         <center>
+            <br><br><br>
+            <a href="meme.html"><img src="шар.png" width="370" height="370"></a>
+            <br><br><br><br>
+            <h3><impact>Создано:</impact></h3>
             <br>
-            Что за покемон?
-            <br><br>
-            <a href="meme.html"><img src="шар.png" width="200" height="200"></a>
+            <a href="https://www.youtube.com/@Coddexoficcial"><img src="coddex banner.gif" width="200" height="200"></a>
         </center>
     </footer>
 </body>
