--- a/meme.html
+++ b/meme.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" a href="main.css">
 </head>
 <body>
-    <video controls autoplay loop >
-        <source src="Погромче.mp4" type="video/mp4"
-    </video>
+ <audio autoplay loop>
+    <source src="Ловушечка.MP3" type="audio/mpeg">
+ </audio>
 </body>
 </html>
